Fix player list width on mobile

--- a/templates/GamePage/Phases/WaitForPlayers/style.module.css
+++ b/templates/GamePage/Phases/WaitForPlayers/style.module.css
@@ -115,6 +115,7 @@
   .playerList {
     position: absolute;
     display: none;
+    max-width: 100%;
   }
 
   .chat--show,
